# LLM_Project_team2

./: .env.example  .gitignore  .gitmessage.txt  CONTRIBUTING.md  README.md  pyproject.toml  requirements._llm_team2txt  requirements_ocr_eval.txt  requirements_ocr_eval_vlm.txt  requirements_ocr_vl15.txt  test.html
.github/: pull_request_template.md
checkpoints/faiss_openai/: chunks.json
configs/: default.yaml  ocr_default.yaml  ocr_table_normalization_rules.yaml
data/: info.txt
data/v1/: info.txt
data/v2/: _dar_cor_gold.txt  eval_questions.example.jsonl
docs/: evaluation.md  notion-rag-prompt-update.md  ocr.md  operations.md
scripts/: build_cover_form_eval_subset.py  run_all_ocr_rag_pipeline.sh  run_all_raw_ocr_rag_pipeline.sh  run_all_rawocr_rag_pipeline.sh  run_curated_rag_stage.sh  run_ocr_eval_stage.sh  run_ocr_stage.sh  run_rag_stage.sh  shrink_eval_questions.py
src/: cli.py  cli_hug.py  config.py  config_ocr.py
src/Parsing/: convert_prechunk_to_embedding_input.py  old_parsing.py  parsing.py  pdf_parsing.py
src/bidmate_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/chunking/: chunking.py  old_chunking.py
src/dataset/: loaders.py  schema.py
src/engine/: doc_scope.py  hybrid_search.py  prompts.py  question_taxonomy.py  rag.py  vector_store.py
src/evaluation/: __init__.py  answer.py  build_eval_report.py  generate_eval_questions.py  generation.py  harness_metrics.py  langsmith_harness.py  llm_judge.py  mlflow_harness.py  question_taxonomy.py  retrieval.py
src/models/: openai_client.py
tests/: test_chunker.py  test_eval_report_pipeline.py  test_hybrid_search.py  test_merge_embedded.py  test_table_chunking.py
(+22 files in other folders)
